add favicon link2

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description"
-        content="A page dedicated to the works of Matilda Anderssons, a swedish artist that does illustrations and acrylic paintings." />
+    <meta name="description" content="A page dedicated to the works of Matilda Anderssons, a swedish artist that does illustrations and acrylic paintings." />
     <meta name="keywords" content="artist, matilda, illustrations, paintings, acrylics">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="manifest" href="/site.webmanifest">
     <title>Matilda Illustration</title>
     
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
