--- a/index.html
+++ b/index.html
@@ -5,25 +5,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="A page dedicated to the works of Matilda Anderssons, a swedish artist that does illustrations and acrylic paintings." />
+    <meta name="description"
+        content="A page dedicated to the works of Matilda Anderssons, a swedish artist that does illustrations and acrylic paintings." />
     <meta name="keywords" content="artist, matilda, illustrations, paintings, acrylics">
     <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="manifest" href="/site.webmanifest">
     <title>Matilda Illustration</title>
-    
-    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 </head>
 
 <body>
-    <header class="header" >
+    <header class="header">
         <!-- Logo -->
         <h1 class="logo">
-        <a href="index.html" class="logo" aria-label="If you click on this it takes you back to the first page 'home' ">
-            Matilda Illustration</a>
+            <a href="index.html" class="logo"
+                aria-label="If you click on this it takes you back to the first page 'home' ">
+                Matilda Illustration</a>
         </h1>
-        
+
         <!-- Navigation menu -->
         <nav class="nav">
             <ul class="nav-list">
