add img and text to readme 'contact page' and add break lines to about section custom painting

--- a/about.html
+++ b/about.html
@@ -80,11 +80,11 @@
                     aria-label="If you click this it will take you to the gallery page that shows my illustraions">
                     My Illustrations</a>
                 <p class="about-text">
-                    I also do acrylic paintings, on canvases in different sizes, it’s a great way to relax and just
+                    I also do acrylic paintings, on canvases in different sizes, I find it to be a nice way to relax and just
                     enjoy the moment.
-                    I love to paint acrylic paintings together with friends and family, it’s a great way to spend time
+                    I love to paint acrylic paintings together with friends and family, it's a great way to spend time
                     together and be creative.
-                    Get inspired by my acrylic paintings in the gallery!</p>
+                    You'll find most of my acrylic paintings in the gallery!</p>
                 <a href="acrylics.html" class="link-box"
                     aria-label="If you click this it will take you to the gallery page that shows my acrylic paintings">
                     My Acrylics</a>
@@ -102,15 +102,16 @@
             <div class="custom-order">
                 <h3 class="about-header">Custom paintings</h3>
                 <p class="about-text">
-                    The easiest way to order a painting is to either use the contact page, or dm me on Instagram.
+                    The easiest way to order a painting is to either use the contact page, or dm me on Instagram.<br>
                     If you'd like a custom illustration I'll need a photo to paint by, once I've got that, I can get
-                    back to you with a quote. Prices varies and are based on the level of details and scope of the
+                    back to you with a quote. <br>
+                    Prices varies and are based on the level of details and scope of the
                     painting.
                     Get in touch and we'll sure figure something out that suits your need and occasion.
                 </p>
                 <a href="contact.html" class="link-box"
                     aria-label="If you click this it will take you to the contact page where you can fill in a form">
-                    Contact me</a>
+                    Get in touch!</a>
             </div>
         </div>
     </main>
