change text on contact page

--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
         
         <form action="contact-reviced.html" method="get" class="contact-form">
             <div class="contact-text">
-                <h2>Have a question?</h2>
+                <h2>Want to get in touch?</h2>
                 <p>Or maybe you would like to get a quote for a custom painting? Whatever you have on your heart - contact me!</p>
             </div>
             <div class="contact-element">
@@ -61,10 +61,10 @@
             <div class="contact-element">
                 <label for="options">What can I do for you?</label>
                 <select id="options" name="options" class="form-select form-hover">
-                    <option value="questions">Questions</option>
+                    <option value="questions">Contact</option>
                     <option value="orders">Special order</option>
-                    <option value="contact">Contact</option>
-                    <option value="Collaberations">Collaberations</option>
+                    <option value="contact">Questions</option>
+                    <option value="Collaberations">Collaboration</option>
                 </select>
             </div>
             <div class="contact-element">
