indent code on all pages

--- a/about.html
+++ b/about.html
@@ -49,17 +49,17 @@
             <div class="about-me">
                 <h2 class="about-header hey-you">Hey you!</h2>
                 <p class="about-text">
-                    Nice to meet you!<br> 
+                    Nice to meet you!<br>
                     If you haven't already guessed, my name is Matilda!
                     I'm 22 years old, born and raised in Skövde, Sweden.
                     Ever since I was a little kid have I loved to paint and be creative as many children does, however
                     my love affair with painting never stopped.</p>
-                    <p class="about-text">
+                <p class="about-text">
                     Little more than two years ago I attended a course in Illustration painting from Berghs Scool of
                     Communication in Stockholm, and I've been hooked ever since!
                     The last couple of years has been devoted to finding new ways and techniques to paint, and
                     continuing on my creative path, hopefully I can inspire you to be creative to!</p>
-         
+
                 <!-- Add information about matilda-->
             </div>
             <div class="painter-image">
@@ -80,7 +80,8 @@
                     aria-label="If you click this it will take you to the gallery page that shows my illustraions">
                     My Illustrations</a>
                 <p class="about-text">
-                    I also do acrylic paintings, on canvases in different sizes, I find it to be a nice way to relax and just
+                    I also do acrylic paintings, on canvases in different sizes, I find it to be a nice way to relax and
+                    just
                     enjoy the moment.
                     I love to paint acrylic paintings together with friends and family, it's a great way to spend time
                     together and be creative.
