--- a/acrylics.html
+++ b/acrylics.html
@@ -44,25 +44,36 @@
     </header>
     <main class="acrylic-page">
         <div class="gallery-images">
-            <img src="assets/images/acrylics/acrylic-mixedfeelings.webp" alt="a acrylic painting, a girl smoking and the text 'mixed feelings', gold dripping down from the top">
+            <img src="assets/images/acrylics/acrylic-mixedfeelings.webp"
+                alt="a acrylic painting, a girl smoking and the text 'mixed feelings', gold dripping down from the top">
             <img src="assets/images/acrylics/acryllinje.webp" alt="a acrylic painting, showing the lines of a woman">
-            <img src="assets/images/acrylics/acrylmålning.webp" alt="a acrylic painting of a woman with squares in the background">
-            <img src="assets/images/acrylics/acrylic-sea&bridge.webp" alt="a acrylic painting, its a scen from the swedish arcapeligo just after sunset with the sky in beautiful blue colors">
-            <img src="assets/images/acrylics/rosaleoacrylic-014.webp" alt="a acrylic painting of a woman and a leopard with pink background">
-            <img src="assets/images/acrylics/acrylic-2hangingosofa.webp" alt="two acrylic paintings hanging over a sofa, one of them is a girl sitting down with a hat on her head, the other is the behind of a girl with jeans">
-            <img src="assets/images/acrylics/acryllinjeq2gul.webp" alt="a acrylic painting, showing the lines of a woman">
-            <img src="assets/images/acrylics/acrylic-linesmartini.webp" alt="a acrylic painting, the lines of a woman in a martini glass">
-            <img src="assets/images/acrylics/acrylic-twomen.webp" alt="two acrylic paintings, black and white portraing men, one in a suite and one showing muscle">
-            <img src="assets/images/acrylics/acrylic-flowers.webp" alt="a acrylic painting, flowers in pind and purple and lines in black">
-            <img src="assets/images/acrylics/acrylic-marilyn.webp" alt="a acrylic painting with a blue background, a heart shape text reading 'more love' and a marilyn monroe lady">
-            <img src="assets/images/acrylics/acrylic-womanwithhair.webp" alt="a acrylic painting, a girl without a face, only the lines and hair with a yellow background">
+            <img src="assets/images/acrylics/acrylmålning.webp"
+                alt="a acrylic painting of a woman with squares in the background">
+            <img src="assets/images/acrylics/acrylic-sea&bridge.webp"
+                alt="a acrylic painting, its a scen from the swedish arcapeligo just after sunset with the sky in beautiful blue colors">
+            <img src="assets/images/acrylics/rosaleoacrylic-014.webp"
+                alt="a acrylic painting of a woman and a leopard with pink background">
+            <img src="assets/images/acrylics/acrylic-2hangingosofa.webp"
+                alt="two acrylic paintings hanging over a sofa, one of them is a girl sitting down with a hat on her head, the other is the behind of a girl with jeans">
+            <img src="assets/images/acrylics/acryllinjeq2gul.webp"
+                alt="a acrylic painting, showing the lines of a woman">
+            <img src="assets/images/acrylics/acrylic-linesmartini.webp"
+                alt="a acrylic painting, the lines of a woman in a martini glass">
+            <img src="assets/images/acrylics/acrylic-twomen.webp"
+                alt="two acrylic paintings, black and white portraing men, one in a suite and one showing muscle">
+            <img src="assets/images/acrylics/acrylic-flowers.webp"
+                alt="a acrylic painting, flowers in pind and purple and lines in black">
+            <img src="assets/images/acrylics/acrylic-marilyn.webp"
+                alt="a acrylic painting with a blue background, a heart shape text reading 'more love' and a marilyn monroe lady">
+            <img src="assets/images/acrylics/acrylic-womanwithhair.webp"
+                alt="a acrylic painting, a girl without a face, only the lines and hair with a yellow background">
 
         </div>
         <div class="back">
             <a href="gallery.html" class="link-box"
-            aria-label="If you click on this it will take you back to the first gallery page where">
-            Back to gallery
-        </a>
+                aria-label="If you click on this it will take you back to the first gallery page where">
+                Back to gallery
+            </a>
         </div>
     </main>
     <footer class="footer">
