--- a/contact.html
+++ b/contact.html
@@ -44,19 +44,22 @@
         </nav>
     </header>
     <main class="contact-page">
-        
+
         <form action="contact-reviced.html" method="get" class="contact-form">
             <div class="contact-text">
                 <h2>Want to get in touch?</h2>
-                <p>Or maybe you would like to get a quote for a custom painting? Whatever you have on your heart - contact me!</p>
+                <p>Or maybe you would like to get a quote for a custom painting? Whatever you have on your heart -
+                    contact me!</p>
             </div>
             <div class="contact-element">
                 <label for="name">Name: </label>
-                <input id="name" type="text" name="name" class="form-input form-hover" placeholder="Your name.." required>
+                <input id="name" type="text" name="name" class="form-input form-hover" placeholder="Your name.."
+                    required>
             </div>
             <div class="contact-element">
                 <label for="email">Email: </label>
-                <input id="email" type="email" name="email" class="form-input form-hover" placeholder="Your email adress.." required>
+                <input id="email" type="email" name="email" class="form-input form-hover"
+                    placeholder="Your email adress.." required>
             </div>
             <div class="contact-element">
                 <label for="options">What can I do for you?</label>
@@ -68,7 +71,8 @@
                 </select>
             </div>
             <div class="contact-element">
-                <textarea name="message" class="form-input textarea form-hover" placeholder="Write your message here!" required></textarea>
+                <textarea name="message" class="form-input textarea form-hover" placeholder="Write your message here!"
+                    required></textarea>
             </div>
             <div class="contact-element submit-center">
                 <input type="submit" value="Submit" class="link-box">
