--- a/illustrations.html
+++ b/illustrations.html
@@ -44,30 +44,45 @@
     </header>
     <main class="illustration-page">
         <div class="gallery-images">
-            <img src="assets/images/illustrations/3amigos_800x600-005.webp" alt="an illustration portraing three friends togheter">
-            <img src="assets/images/illustrations/cd-fullsize_800x600-000.webp" alt="an illustration of a girl with a Dior bag">
-            <img src="assets/images/illustrations/grandparents_800x600.webp" alt="an illustration of granparents and showing the years they have been married">
-            <img src="assets/images/illustrations/green-vest_800x600-002.webp" alt="an illustration of a girl with a green vest and green beanie">
-            <img src="assets/images/illustrations/headincloud_800x600-007.webp" alt="an illustration of a lady with her head gone in a cloude">
-            <img src="assets/images/illustrations/Par_800x600-004.webp" alt="an illustration of a couple being happy together and the man holding a dog">
-            <img src="assets/images/illustrations/pink-magväska_800x600-006.webp" alt="an illustration of a girl with a bag around her waist with pink background">
-            <img src="assets/images/illustrations/girlwithgoogles.webp" alt="an illustration of a girl with ski-googles">
-            <img src="assets/images/illustrations/purplesittinggirl_800x600-009.webp" alt="an illustration of a girl sitting with purple background">
-            <img src="assets/images/illustrations/stylishladygreyscale.webp" alt="an illustration of a stylish lady in greyscale">
-            <img src="assets/images/illustrations/CD800x600-001.webp" alt="a close up of the illustration of a girl with a dior bag">
-            <img src="assets/images/illustrations/yellowshirtbandana.webp" alt="an illustration of a lady with a yellow shirt and bandana">
-            <img src="assets/images/illustrations/marriedcouple.webp" alt="an illustration of a couple on their wedding day">
-            <img src="assets/images/illustrations/bluejoggers.webp" alt="an illustration of a girl in blue joggers with a baby-blue background">
+            <img src="assets/images/illustrations/3amigos_800x600-005.webp"
+                alt="an illustration portraing three friends togheter">
+            <img src="assets/images/illustrations/cd-fullsize_800x600-000.webp"
+                alt="an illustration of a girl with a Dior bag">
+            <img src="assets/images/illustrations/grandparents_800x600.webp"
+                alt="an illustration of granparents and showing the years they have been married">
+            <img src="assets/images/illustrations/green-vest_800x600-002.webp"
+                alt="an illustration of a girl with a green vest and green beanie">
+            <img src="assets/images/illustrations/headincloud_800x600-007.webp"
+                alt="an illustration of a lady with her head gone in a cloude">
+            <img src="assets/images/illustrations/Par_800x600-004.webp"
+                alt="an illustration of a couple being happy together and the man holding a dog">
+            <img src="assets/images/illustrations/pink-magväska_800x600-006.webp"
+                alt="an illustration of a girl with a bag around her waist with pink background">
+            <img src="assets/images/illustrations/girlwithgoogles.webp"
+                alt="an illustration of a girl with ski-googles">
+            <img src="assets/images/illustrations/purplesittinggirl_800x600-009.webp"
+                alt="an illustration of a girl sitting with purple background">
+            <img src="assets/images/illustrations/stylishladygreyscale.webp"
+                alt="an illustration of a stylish lady in greyscale">
+            <img src="assets/images/illustrations/CD800x600-001.webp"
+                alt="a close up of the illustration of a girl with a dior bag">
+            <img src="assets/images/illustrations/yellowshirtbandana.webp"
+                alt="an illustration of a lady with a yellow shirt and bandana">
+            <img src="assets/images/illustrations/marriedcouple.webp"
+                alt="an illustration of a couple on their wedding day">
+            <img src="assets/images/illustrations/bluejoggers.webp"
+                alt="an illustration of a girl in blue joggers with a baby-blue background">
             <img src="assets/images/illustrations/couple.webp" alt="an illustration of a couple">
-            <img src="assets/images/illustrations/couplescheering.webp" alt="an illustration of a couple cheering with drinks">
-            
-            
+            <img src="assets/images/illustrations/couplescheering.webp"
+                alt="an illustration of a couple cheering with drinks">
+
+
         </div>
         <div class="back">
             <a href="gallery.html" class="link-box"
-            aria-label="If you click on this it will take you back to the first gallery page where">
-            Back to gallery
-        </a>
+                aria-label="If you click on this it will take you back to the first gallery page where">
+                Back to gallery
+            </a>
         </div>
 
     </main>
