tested and removed npm favicon packages, add link in head, trying to get favicon to work..

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         content="A page dedicated to the works of Matilda Anderssons, a swedish artist that does illustrations and acrylic paintings." />
     <meta name="keywords" content="artist, matilda, illustrations, paintings, acrylics">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <title>Matilda Illustration</title>
 
 </head>
